--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div>
                     <label for="inputName" class="fw-bold mb-2"><i class="fa-solid fa-book-bookmark me-1"></i>  Site Name </label>
                     <input type="text" name="name" id="siteName" class="form-control mb-3" placeholder="Bookmarker Name">
+                    <p class="text-danger d-none " id="nameAlert">Must Start With Capital letter and 3 Character</p>
                     <label for="inputName" class="fw-bold mb-2"><i class="fa-solid fa-link me-1"></i>  Site URL </label>
                     <input type="text" name="name" id="siteUrl" class="form-control mb-3" placeholder="Bookmarker Name">
                 </div>
