--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     <p class="text-danger d-none " id="nameAlert">Must Start With Capital letter and 3 Character</p>
                     <label for="inputName" class="fw-bold mb-2"><i class="fa-solid fa-link me-1"></i>  Site URL </label>
                     <input type="text" name="name" id="siteUrl" class="form-control mb-3" placeholder="Bookmarker Name">
+                    <p class="text-danger d-none " id="urlAlert">Invalid URL </p>
                 </div>
                 <div class="d-flex justify-content-center my-3">
                     <button type="button" class="btn btn-danger px-5 " id="submitBtn">Submit</button>
