--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
                 </div>
 
             </div>
+            <div class="d-flex justify-content-center align-items-center my-4">
+                <input type="text" name="Search" id="search" class="form-control mb-3 w-25" placeholder="Search....">
+
+            </div>
             <div
                 class="table-responsive my-4"
             >
